Fixed wrong color for iframe table on IE10

--- a/static/scss/external.scss
+++ b/static/scss/external.scss
@@ -103,6 +103,12 @@ body > div > table {
         td {
             border-bottom: 1px solid $gray-lightest !important;
         }
+
+        td,
+        a,
+        a:hover {
+            color: $black;
+        }
     }
 }
 
